f1000 foramt almost working.  Need to figure out tables and figures

--- a/manuscript/components/f1000_styles.sty
+++ b/manuscript/components/f1000_styles.sty
@@ -16,7 +16,7 @@
 \usepackage{lastpage}
 %
 \newcommand{\versionDate}{\footnotesize \textit{F1000Research} 2013 - DRAFT ARTICLE (PRE-SUBMISSION)}
-\newcommand{\flogo}{\includegraphics[height=12pt]{F1000header.png}}
+\newcommand{\flogo}{\includegraphics[height=12pt]{components/F1000header.png}}
 % Section heading styles
 \usepackage[compact]{titlesec} 
 
